update datamanagers, request , response and handlers in server
update datamanagers and handlers in server